[package]
name = "four-button-roguelike"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[dependencies]
entity_store_helper = "0.2"
cgmath = { version = "0.15", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
enum_primitive = "0.1"
direction = "0.1"

[build-dependencies]
entity_store_code_gen = "0.2"
